fixed spacing

--- a/css/station-tool.css
+++ b/css/station-tool.css
@@ -148,7 +148,7 @@ fieldset {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 10px;
+    margin: 25px;
   }
 
   @media only screen and (max-width: 450px) {
